--- a/src/oneid-app/admin/group/meta/Meta.less
+++ b/src/oneid-app/admin/group/meta/Meta.less
@@ -85,6 +85,14 @@
       li {
         justify-content: space-between;
         align-items: center;
+
+        > span {
+          width: 140px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+
         .icon-more {
           display: none;
           margin-right: 12px;
